<resources>
    <string name="app_name">Zshot</string>
    <string name="Exit_Description">This Button is to exit the app</string>
    <string name="ShutterButton_Description">Take Photo</string>
    <string name="Flash_Description">Change flash</string>
    <string name="Hdr_description">Change HDR state</string>
    <string name="SettingIconDescription">Setting icon</string>
    <string name="titleCameraSettings">Camera Settings</string>
    <string name="titleCameraSettingsSummary">change camera related settings</string>
    <string name="ResolutionTitle">Resolution</string>
    <string name="ResolutionSummary">Change image resolution</string>
    <string name="ContrastPrefTitle">Contrast value</string>
    <string name="ContrastPrefSummary">Set value of contrast in images.</string>
    <string name="curveTitle">Curves</string>
</resources>
