<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camera.zshot.zshot.ui.MainActivity"
    android:background="@android:drawable/screen_background_dark"
    android:visibility="visible">

    <FrameLayout
        android:id="@+id/DrawingSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/Panel2"
        android:layout_above="@+id/Panel1"
        android:visibility="visible">

    </FrameLayout>

    <TextureView
        android:id="@+id/Preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:layout_below="@+id/Panel2"
        android:layout_above="@+id/Panel1"/>

    <RelativeLayout
        android:id="@+id/CurveLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_below="@id/Panel2"
        android:layout_margin="10sp">

        <SeekBar
            android:id="@+id/RedCurveBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:rotation="0"
            android:layout_margin="5dp"
            android:progressTint="@color/Red"
            android:thumbTint="@color/Red"/>

        <SeekBar
            android:id="@+id/GreenCurveBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:rotation="0"
            android:layout_below="@+id/RedCurveBar"
            android:layout_margin="5dp"
            android:progressTint="@color/Green"
            android:thumbTint="@color/Green" />

        <SeekBar
            android:id="@+id/BlueCurveBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:rotation="0"
            android:layout_below="@+id/GreenCurveBar"
            android:layout_margin="5dp"
            android:progressTint="@color/Blue"
            android:thumbTint="@color/Blue"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Panel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:drawable/screen_background_dark_transparent">

        <ImageButton
            android:id="@+id/ShutterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/capture2"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"
            android:onClick="TakePicture"
            android:contentDescription="@string/ShutterButton_Description"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Panel2"
        android:layout_width="match_parent"
        android:layout_height="84sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/screen_background_dark_transparent">

        <ImageButton
            android:id="@+id/FlashButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_flash_auto_black_24dp"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10sp"
            android:contentDescription="@string/Flash_Description" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/HDR_Button"
            android:src="@drawable/ic_hdr_off_black_24dp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/FlashButton"
            android:background="@android:color/transparent"
            android:layout_marginStart="10sp"
            android:contentDescription="@string/Hdr_description"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Settings"
            android:src="@drawable/ic_settings_white_24dp"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10sp"
            android:contentDescription="@string/SettingIconDescription"/>

        <Button
            android:id="@+id/curveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curveTitle"
            android:layout_toEndOf="@id/HDR_Button"
            android:background="@android:color/transparent"
            android:layout_marginStart="10sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>
